--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,7 @@ jobs:
       # 2. Autenticar no Google Cloud usando Secret
       - name: Google Cloud Auth
         run: |
-          echo "${{ secrets.GCP_KEY }}" > gcp-key.json
-          gcloud auth activate-service-account --key-file=gcp-key.json
+          echo "${{ secrets.GCP_KEY }}" | gcloud auth activate-service-account --key-file=-
 
       # 3. Configurar Docker para Artifact Registry
       - name: Configure Docker
