--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,8 +41,14 @@ jobs:
 
           # Push da imagem
           docker push $IMAGE:$TAG
+      
+      # 5. Instalar gke-gcloud-auth-plugin
+      - name: Install GKE Auth Plugin
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
 
-      # 5. Conectar no GKE
+      # 5.1 Conectar no GKE
       - name: Get GKE credentials
         run: |
           gcloud container clusters get-credentials gsconsig-1 \
